# news

./: .env  .gitignore  404.html  README.md  fetch_transcript.py  index.html  llm.py  main.py  mkdocs.yml  prompt.py  pyproject.toml  rough.py  sitemap.xml
.github/workflows/: deploy.yml
2026/Feb_2026/: 02_Feb_2026.md
2026/Feb_2026/02_Feb_2026/: index.html
2026/Feb_2026/04_Feb_2026/: index.html
2026/Feb_2026/05_Feb_2026/: index.html
2026/Feb_2026/06_Feb_2026/: index.html
2026/Feb_2026/dummy/: index.html
docs/: index.md
docs/2026/Feb_2026/: 02_Feb_2026.md  04_Feb_2026.md  05_Feb_2026.md  06_Feb_2026.md
search/: search_index.json
site/2026/Feb_2026/02_Feb_2026/: index.html
site/2026/Feb_2026/06_Feb_2026/: index.html
